--- a/packages/frontend/src/components/navbar/Navbar.css
+++ b/packages/frontend/src/components/navbar/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
-  height: 100px;
+  height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 40px;
-  background: #fff;
+  background: #123458;
 }
 
 .logo {
@@ -73,4 +73,8 @@
 
 .cart-btn{
  cursor: pointer;
+}
+
+.search-icon {
+  font-size: 12rem;
 }
