--- a/packages/frontend/src/features/home/homePage.css
+++ b/packages/frontend/src/features/home/homePage.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #F1EFEC;
+}
+
 .banner-area {
    background-image: url(../../../public/images/ropaGenerica.png);
    background-size: cover;
@@ -8,3 +12,5 @@
     display: flex;
     justify-content: center;
 }
+
+
