la funcionalidad del carrito ya anda y esta creada el checkout.
Co-authored-by: Dei_schmidt <David-Schmidt02@users.noreply.github.com>

--- a/packages/frontend/src/features/home/Home.css
+++ b/packages/frontend/src/features/home/Home.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F1EFEC;
+    background-color: var(--color-beige-light);
     padding : 0;
     font-family: 'Montserrat', sans-serif;
 }
