--- a/packages/frontend/src/components/navbar/Navbar.css
+++ b/packages/frontend/src/components/navbar/Navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 40px;
-  background: #123458;
+  background: var(--color-blue-dark);
 }
 
 .logo {
@@ -47,12 +47,14 @@
   padding: 8px 0;
 }
 
-.search-icon {
-  font-size: 1.2rem;
-  margin-left: 8px;
-  color: #222;
+.navbar-icon {
+  margin-left: 4px;
+  height: 24px;
+  width: 24px;;
+  color: var(--color-beige-medium);
   cursor: pointer;
 }
+
 
 .navbar-right {
   display: flex;
@@ -69,12 +71,4 @@
   cursor: pointer;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-}
-
-.cart-btn{
- cursor: pointer;
-}
-
-.search-icon {
-  font-size: 12rem;
 }
