--- a/packages/frontend/src/components/navbar/Navbar.css
+++ b/packages/frontend/src/components/navbar/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
-  height: 80px;
+  height: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 40px;
-  background: var(--color-blue-dark);
+  background: var(--color-black);
 }
 
 .logo {
@@ -15,7 +15,7 @@
 }
 
 .logo img {
-  height: 60px;
+  height: 65px;
   width: auto;
   object-fit: contain; /*  La imagen se escala para caber en el contenedor sin recortarse. */
   margin-right: 8px;
@@ -49,8 +49,8 @@
 
 .navbar-icon {
   margin-left: 4px;
-  height: 24px;
-  width: 24px;;
+  height: 30px;
+  width: 30px;
   color: var(--color-beige-medium);
   cursor: pointer;
 }
@@ -63,8 +63,7 @@
 }
 
 .login-btn {
-  background: #F5F5F5;
-  border: 2px s;
+  background: var(--color-black);
   border-radius: 6px;
   padding: 8px 18px;
   font-size: 1rem;
