--- a/packages/frontend/src/components/navbar/Navbar.css
+++ b/packages/frontend/src/components/navbar/Navbar.css
@@ -71,3 +71,17 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
 }
+
+.search-navbar-btn {
+  width: 32px;
+  height: 32px;
+  border-left: 1px solid var(--color-black);
+  border-top: none;
+  border-right: none;
+  border-bottom: none; 
+  transition: all 3s ease;
+}
+
+.search-navbar-btn: hover{
+  background: var(--color-black);
+}
