--- a/packages/frontend/src/features/home/components/categoria/CategoriaItem.css
+++ b/packages/frontend/src/features/home/components/categoria/CategoriaItem.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 
-.content {
+.content-categoria {
   font-family: 'Bebas Neue', sans-serif;
 }
 .categoria-item {
@@ -30,7 +30,7 @@
   color: #333;
 }
 
-.wrapper {
+.categoria-wrapper {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -49,7 +49,8 @@
   border-radius: 12px;
 }
 
-.content {
+.content-categoria {
+  font-family: 'Bebas Neue', sans-serif;
   position: absolute;
   top: 0;
   left: 0;
@@ -64,9 +65,8 @@
   opacity: 0;
   transition: opacity 0.3s ease;
   background: var(--color-blue-dark);
-
 }
 
-.image:hover .content {
+.image:hover .content-categoria {
   opacity: 1;
 }
