--- a/packages/frontend/src/components/navbar/Navbar.css
+++ b/packages/frontend/src/components/navbar/Navbar.css
@@ -1,10 +1,25 @@
 .navbar {
-  height: 90px;
+  height: 120px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 40px;
   background: var(--color-black);
+  position: fixed; 
+  z-index: 90;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+}
+
+.navbar.scrolled {
+  height: 70px;
+  top: 10px;
+  background: rgba(0, 0, 0, 0.9);
+  backdrop-filter: blur(6px);
 }
 
 .logo {
@@ -22,6 +37,10 @@
   cursor: pointer;
 }
 
+.navbar.scrolled .logo img {
+  height: 45px;
+}
+
 .navbar-center {
   flex: 1;
   display: flex;
@@ -35,7 +54,7 @@
   border-radius: 8px;
   padding: 0 16px;
   width: 480px;
-  height: 40px;
+  height: 45px;
 }
 
 .search-box input {
@@ -82,6 +101,6 @@
   transition: all 3s ease;
 }
 
-.search-navbar-btn: hover{
+.search-navbar-btn :hover{
   background: var(--color-black);
 }
