--- a/packages/frontend/src/components/navbar/Navbar.css
+++ b/packages/frontend/src/components/navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  height: 120px;
+  height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -7,7 +7,7 @@
   background: var(--color-black);
   position: fixed; 
   z-index: 90;
-  top: 10%;
+  top: 10px;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 20px;
