Arreglos en el Navbar: - Posición fija, evitamos errores de superposicion - Ocupa todo el ancho - El logo se mantiene con el mismo tamaño Carrito: - Se agrega más informacion de cada producto en el carrito así como la posibilidad de modificar la cantidad. Botones: - Se arregla la clase base. Footer: - Mejora y mayor espaciado entre las secciones.

--- a/packages/frontend/src/features/home/Home.css
+++ b/packages/frontend/src/features/home/Home.css
@@ -6,14 +6,15 @@ body {
 
 .banner-area {
   background-image: url(../../../public/images/ropaGenerica.png);
-  background-size: cover;           /* cubre todo el ancho sin deformar */
-  background-position: center;      /* centra la imagen */
-  height: 60vh;                     /* altura del banner */
+  background-size: cover;
+  background-position: center;
+  height: 60vh;
   width: 100%;
   display: flex;
-  align-items: flex-end;            /* coloca el texto cerca del borde inferior */
-  justify-content: center;          /* centra horizontalmente el texto */
+  align-items: flex-end;
+  justify-content: center;
   position: relative;
+  margin-top: 70px;
 }
 
 .banner-text {
