--- a/packages/frontend/src/components/footer/Footer.css
+++ b/packages/frontend/src/components/footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #000;
   color: #fff;
-  padding: 40px 20px;
+  padding: 40px 60px;
   font-family: "Arial", sans-serif;
 }
 
@@ -9,15 +9,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 30px;
-  max-width: 1000px;
+  gap: 100px;
+  max-width: 1400px;
   margin: 0 auto;
 }
 
 .footer-section {
   flex: 1;
   min-width: 250px;
-  justify-content: center;
 }
 
 .footer-title {
@@ -28,9 +27,8 @@
 
 .footer-subtitle {
   font-size: 1.3rem;
-  margin-bottom: 10px ;
+  margin-bottom: 10px;
   font-weight: 500;
-  text-align: center;
 }
 
 .footer-text {
@@ -47,7 +45,7 @@
 
 .footer-links li {
   margin-bottom: 6px;
-  text-align: center;
+  text-align: left;
 }
 
 .footer-links a {
@@ -62,8 +60,7 @@
 
 .footer-icons {
   display: flex;
-  justify-content: center;
-  gap: 10px
+  gap: 15px;
 }
 
 .footer-icons a {
