--- a/packages/frontend/src/components/navbar/Navbar.css
+++ b/packages/frontend/src/components/navbar/Navbar.css
@@ -1,25 +1,22 @@
 .navbar {
   height: 70px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 40px;
   background: var(--color-black);
-  position: fixed; 
+  position: fixed;
   z-index: 90;
-  top: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 20px;
+  top: 0;
+  left: 0;
   transition: all 0.3s ease-in-out;
   box-shadow: 0 4px 10px rgba(0,0,0,0.25);
 }
 
 .navbar.scrolled {
-  height: 70px;
-  top: 10px;
-  background: rgba(0, 0, 0, 0.9);
-  backdrop-filter: blur(6px);
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(10px);
 }
 
 .logo {
@@ -32,13 +29,9 @@
 .logo img {
   height: 65px;
   width: auto;
-  object-fit: contain; /*  La imagen se escala para caber en el contenedor sin recortarse. */
+  object-fit: contain;
   margin-right: 8px;
   cursor: pointer;
-}
-
-.navbar.scrolled .logo img {
-  height: 45px;
 }
 
 .navbar-center {
