--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -6,9 +6,13 @@
   --color-white: #FFFFFF;
 
   --color-btn-primary-cyan: #007bff;
-  --color-btn-primary-blue: #1d4ed8;
+  --color-btn-primary-blue: #202227;
   --color-btn-secondary-blue: #2563eb;
 
+
+  --color-verde-disponible: #10b981;
+  --color-naranja-bajo: #f59e0b;
+  --color-rojo-no-disponible: #ef4444;
 
   --color-detail-btn-primary-border: #cbd5e0;
 
