--- a/packages/frontend/src/components/navbar/Navbar.css
+++ b/packages/frontend/src/components/navbar/Navbar.css
@@ -64,7 +64,6 @@
   cursor: pointer;
 }
 
-
 .navbar-right {
   display: flex;
   align-items: center;
@@ -90,6 +89,8 @@
   border-bottom: none; 
   transition: all 3s ease;
 }
+
+
 
 .search-navbar-btn:hover{
   background: transparent;
@@ -121,8 +122,15 @@
   display: inline-block;
 }
 
+.cart-btn {
+  background-color: black;
+  border-radius: 8px;
+  padding: 6px;
+}
+
 @media (max-width:850px) {
   .navbar-center {
     display: none;
   }
 }
+
