--- a/packages/frontend/src/features/productListingPage/ProductListingPage.css
+++ b/packages/frontend/src/features/productListingPage/ProductListingPage.css
@@ -2,7 +2,8 @@
 
 /* Contenedor de la página */
 .ProductListingPage {
-  padding: 24px;
+  padding-left:  150px;
+  padding-right: 150px;
   padding-top: 92px;
   min-height: 100vh;
   font-family: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
@@ -11,14 +12,13 @@
 /* Lienzo principal con sidebar + contenido */
 .products-main {
   padding: 24px;
-  border-radius: 18px;
+  border-radius: 10px;
   border: 1px solid rgba(0,0,0,.06);
   box-shadow: 0 6px 18px rgba(0,0,0,.06);
   display: grid;
   grid-template-columns: 280px 1fr;
   gap: 2rem;
   background-color: var(--color-white);
-
 }
 
 /* Header de la sección productos */
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 18px;
+  margin-bottom: 10px;
 }
 
 .parte-arriba h1 {
@@ -34,7 +34,7 @@
   font-weight: 800;
   color: var(--color-black);
   margin: 0;
-  font-family: "Bebas neue";
+  font-family: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
 }
 
 /* Sidebar (tarjeta limpia) */
@@ -43,9 +43,9 @@
   margin: -30px 0 -30px -30px;
   padding-left: 30px;
   border-right: 1px solid #eee;
-  background-color: var( --color-beige-medium);
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
+  background-color: var( --color-detail-btn-hover-border);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 /* Contenido principal */
