--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --color-beige-light: #F1EFEC;
-  --color-beige-medium: #D4C9BE;
+  /* --color-beige-medium: #D4C9BE; */
   --color-blue-dark: #123458;
   --color-black: #030303;
   --color-white: #FFFFFF;
